--- a/assets/css/scss/pages/_page-specific-hacks.scss
+++ b/assets/css/scss/pages/_page-specific-hacks.scss
@@ -38,14 +38,6 @@ body.page-id-7645 {
   font-style: normal;
 }
 
-.single-post .page-header h1 {
-  font-size: 2.875rem;
-}
-
-.single-post .page-header h2 {
-  font-size: 1.625rem;
-}
-
 .post-content {
   .post-content-lead {
     .post-details {
